@@ -1,3 +1,6 @@
+2016-05-22  Markus Gans  <guru.mail@muenster.de>
+	* Fix for menus in modal dialogs
+
 2016-05-16  Markus Gans  <guru.mail@muenster.de>
 	* Improve adjustSize()
 	* Implement adjustSizeGlobal() for all widgets
